--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
     implementation 'com.fazecast:jSerialComm:1.3.10'
     implementation 'javax.vecmath:vecmath:1.5.2'
+    implementation group: 'org.jfree', name: 'jfreechart', version: '1.5.0'
+
 }
 
 test {
